--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "leancloud-storage": "^3.2.0",
     "lodash.pick": "^4.4.0",
     "moment": "^2.18.1",
-    "utils-merge": "^1.0.0"
+    "utils-merge": "^1.0.0",
+    "hexo-tag-cloud": "1.0.*" 
   }
 }
