--- a/themes/ylion/_config.yml
+++ b/themes/ylion/_config.yml
@@ -192,7 +192,7 @@ fontAwesome: //cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.min.css
 ## leancloud -- 官网:https://leancloud.cn/
 leancloud_src: http://cdn1.lncld.net/static/js/2.1.0/av-min.js
 ## busuanzi -- 官网：http://busuanzi.ibruce.info/
-busuanzi_src: //dn-lbstatics.qbox.me/busuanzi/2.3/busuanzi.pure.mini.js
+##busuanzi_src: //dn-lbstatics.qbox.me/busuanzi/2.3/busuanzi.pure.mini.js
 
 # theme and site self settings
 since: 2017
